--- a/src/timeline/index.html
+++ b/src/timeline/index.html
@@ -100,10 +100,10 @@
 					</div>
 					<br class="cleared">
 
-					<div ng-if="!clip.show_audio" class="thumb-container">
+					<div ng-show="!clip.ui || !clip.ui.audio_data" class="thumb-container">
 						<img class="thumb thumb-start" ng-if="getThumbPath(clip)" ng-src="{{ getThumbPath(clip) }}"/>
 					</div>
-					<div ng-if="clip.show_audio" class="audio-container">
+					<div ng-show="clip.ui && clip.ui.audio_data.length > 0" class="audio-container">
 						<canvas tl-audio height="46px" width="{{canvasMaxWidth((clip.end - clip.start) * pixelsPerSecond)}}px" class="audio"></canvas>
 					</div>
 
